--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ click==8.1.7
 colorama==0.4.6
 cookiecutter==2.3.0
 et-xmlfile==1.1.0
-Flask==3.0.0
+Flask
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
