--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Flask
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-markdown-it-py==3.0.0
+markdown-it-py
 MarkupSafe==2.1.3
 mdurl==0.1.2
 numpy==1.26.1
