--- a/requirements.txt
+++ b/requirements.txt
@@ -15,21 +15,21 @@ Jinja2==3.1.2
 markdown-it-py
 MarkupSafe==2.1.3
 mdurl==0.1.2
-numpy==1.26.1
-openpyxl==3.1.2
-pandas==2.1.3
-Pygments==2.16.1
-PyQt5==5.15.9
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.12.2
-python-dateutil==2.8.2
-python-slugify==8.0.1
-pytz==2023.3.post1
-PyYAML==6.0.1
-requests==2.31.0
-rich==13.5.2
-six==1.16.0
-text-unidecode==1.3
-tzdata==2023.3
-urllib3==2.0.4
-Werkzeug==3.0.1
+numpy
+openpyxl
+pandas
+Pygments
+PyQt5
+PyQt5-Qt5
+PyQt5-sip
+python-dateutil
+python-slugify
+pytz
+PyYAML
+requests
+rich
+six
+text-unidecode
+tzdata
+urllib3
+Werkzeug
